// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the default slot can set the loading text and style 1`] = `
<div class="loading">
  <div data-test="loading-size"
       style="width: 20px; height: 20px;"
  >
    <div class="spinner"
         style="animation-timing-function: steps(10);"
    >
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(-90deg); transform-origin: -70% 50%; opacity: 1; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(-54deg); transform-origin: -70% 50%; opacity: 0.93; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(-18deg); transform-origin: -70% 50%; opacity: 0.86; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(18deg); transform-origin: -70% 50%; opacity: 0.79; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(54deg); transform-origin: -70% 50%; opacity: 0.72; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(90deg); transform-origin: -70% 50%; opacity: 0.65; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(126deg); transform-origin: -70% 50%; opacity: 0.5800000000000001; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(162deg); transform-origin: -70% 50%; opacity: 0.51; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(198deg); transform-origin: -70% 50%; opacity: 0.44000000000000006; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(234deg); transform-origin: -70% 50%; opacity: 0.3700000000000001; background-color: rgb(153, 153, 153);"
      >
      </i>
    </div>
  </div>
  <div style="color: rgb(153, 153, 153);">
    <p class="test">
      loading...
    </p>
  </div>
</div>
`;

exports[`the size prop can set the loading size 1`] = `
<div class="loading">
  <div data-test="loading-size"
       style="width: 40px; height: 40px;"
  >
    <div class="spinner"
         style="animation-timing-function: steps(10);"
    >
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(-90deg); transform-origin: -70% 50%; opacity: 1; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(-54deg); transform-origin: -70% 50%; opacity: 0.93; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(-18deg); transform-origin: -70% 50%; opacity: 0.86; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(18deg); transform-origin: -70% 50%; opacity: 0.79; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(54deg); transform-origin: -70% 50%; opacity: 0.72; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(90deg); transform-origin: -70% 50%; opacity: 0.65; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(126deg); transform-origin: -70% 50%; opacity: 0.5800000000000001; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(162deg); transform-origin: -70% 50%; opacity: 0.51; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(198deg); transform-origin: -70% 50%; opacity: 0.44000000000000006; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 11px; height: 4px; transform: translate(70%, -50%) rotate(234deg); transform-origin: -70% 50%; opacity: 0.3700000000000001; background-color: rgb(153, 153, 153);"
      >
      </i>
    </div>
  </div>
  <div style="color: rgb(153, 153, 153);">
  </div>
</div>
`;

exports[`the type prop can set the loading type: spinner or circle 1`] = `
<div class="loading">
  <div data-test="loading-size"
       style="width: 20px; height: 20px;"
  >
    <div class="spinner"
         style="animation-timing-function: steps(10);"
    >
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(-90deg); transform-origin: -70% 50%; opacity: 1; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(-54deg); transform-origin: -70% 50%; opacity: 0.93; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(-18deg); transform-origin: -70% 50%; opacity: 0.86; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(18deg); transform-origin: -70% 50%; opacity: 0.79; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(54deg); transform-origin: -70% 50%; opacity: 0.72; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(90deg); transform-origin: -70% 50%; opacity: 0.65; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(126deg); transform-origin: -70% 50%; opacity: 0.5800000000000001; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(162deg); transform-origin: -70% 50%; opacity: 0.51; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(198deg); transform-origin: -70% 50%; opacity: 0.44000000000000006; background-color: rgb(153, 153, 153);"
      >
      </i>
      <i data-test="loading-spinner"
         style="width: 5px; height: 2px; transform: translate(70%, -50%) rotate(234deg); transform-origin: -70% 50%; opacity: 0.3700000000000001; background-color: rgb(153, 153, 153);"
      >
      </i>
    </div>
  </div>
  <div style="color: rgb(153, 153, 153);">
  </div>
</div>
<div class="loading">
  <div data-test="loading-size"
       style="width: 20px; height: 20px;"
  >
    <div class="circle">
      <svg viewbox="0 0 30 30">
        <circle cx="15"
                cy="15"
                r="12"
                data-test="loading-circle"
                stroke="#999"
        >
        </circle>
      </svg>
    </div>
  </div>
  <div style="color: rgb(153, 153, 153);">
  </div>
</div>
`;
